...
                                                              ),
                                                              child: Opacity(
                                                                opacity: 0.0,
                                                                child:
                                                                    FlutterFlowIconButton(
                                                                  key: ValueKey(
                                                                      'addDrinkButton_pvbj'),
                                                                  borderRadius:
                                                                      20.0,
                                                                  buttonSize:
                                                                      80.4,
                                                                  icon: Icon(
                                                                    Icons.add,
...
